# BDS-sampler

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml
LICENSES/: license-info.txt
bds_sampler/: __init__.py
bds_sampler/_sampler/: BDS_sampler.pyx  DiGSampler.c  DiGSampler.h  graphs.pxd  mt.pxd  mt19937ar.c  mt19937ar.h
examples/: basic.py
